--- a/settings.gradle
+++ b/settings.gradle
@@ -52,7 +52,7 @@ include 'eventmesh-security-plugin:eventmesh-security-auth-http-basic'
 include 'eventmesh-trace-plugin'
 include 'eventmesh-trace-plugin:eventmesh-trace-api'
 include 'eventmesh-trace-plugin:eventmesh-trace-zipkin'
-
+include 'eventmesh-trace-plugin:eventmesh-trace-skywalking'
 
 include 'eventmesh-webhook'
 include 'eventmesh-webhook:eventmesh-webhook-api'
